--- a/index.html
+++ b/index.html
@@ -5,253 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RARMEN</title>
-  <style>
-    body,
-    html {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      scroll-behavior: smooth;
-    }
-
-    section {
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-      padding: 20px 0;
-      opacity: 0;
-      transform: translateY(20px);
-      transition: opacity 0.8s ease-out, transform 0.8s ease-out;
-    }
-
-    section.show {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
-    header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: yellow;
-      padding: 10px 0;
-      text-align: center;
-      z-index: 1;
-    }
-
-    header nav a {
-      margin: 0 15px;
-      text-decoration: none;
-      color: black;
-      font-weight: bold;
-    }
-
-    footer {
-      width: 100%;
-      background: yellow;
-      padding: 10px 0;
-      text-align: center;
-      z-index: 1;
-    }
-
-    footer nav a {
-      margin: 0 15px;
-      text-decoration: none;
-      color: black;
-      font-weight: bold;
-    }
-
-    .subTitle {
-      align-self: flex-start;
-      margin-left: 20px;
-    }
-
-    #top {
-      background: url('Top.png') no-repeat center center;
-      position: relative;
-    }
-
-    .top-title {
-      position: absolute;
-      top: 50%;
-      text-align: center;
-    }
-
-    #news {
-      background: rgb(255, 252, 153);
-      height: auto;
-      display: flex;
-      flex-direction: row;
-      align-items: flex-start;
-    }
-
-    #news a {
-      color: #222;
-      text-decoration: none;
-    }
-
-    #news li {
-      list-style: none;
-    }
-
-    .news-content01 {
-      width: 300px;
-      height: 100%;
-    }
-
-    .news-content02 {
-      width: 100%;
-    }
-
-    .news-tr {
-      /*height: 100px;*/
-      display: flex;
-      align-items: center;
-      background: #fff;
-      border: 1px solid rgb(255, 247, 0);
-      transition: background 0.3s ease;
-    }
-
-    .news-tr:hover {
-      background: rgb(255, 247, 0);
-    }
-
-    .news-tr div {
-      padding: 20px;
-    }
-
-    .news-td-date {
-      width: 150px;
-    }
-
-    .news-td-title {
-      width: 250px;
-    }
-
-    .news-td-img {
-      width: 200px;
-    }
-
-    .news-td-more {
-      width: 150px;
-    }
-
-    .news-td-img div {
-      height: 150px;
-      width: 150px;
-      background: gray;
-    }
-
-
-    #about {
-      background: rgb(255, 247, 0);
-      width: 100%;
-    }
-
-    #about .content {
-      display: flex;
-    }
-
-    #about .content div {
-      flex: 1;
-      padding: 20px;
-    }
-
-    #about .content .placeholder {
-      width: 50%;
-      height: 300px;
-      background: gray;
-    }
-
-    #service {
-      width: 100%;
-      text-align: center;
-    }
-
-    #service .content {
-      display: flex;
-      justify-content: space-around;
-    }
-
-    #service .content div {
-      writing-mode: vertical-rl;
-      border: 2px solid black;
-      padding: 10px;
-      width: 80px;
-      height: 300px;
-      overflow: hidden;
-      transition: width 0.3s ease;
-      cursor: pointer;
-    }
-
-    #service .content div .detail {
-      display: none;
-    }
-
-    #service .content div:hover {
-      width: 240px;
-    }
-
-    #service .content div:hover .detail {
-      display: block;
-    }
-
-    #furture {
-      background: rgb(255, 252, 153);
-    }
-
-    #furture .content {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .furture-item {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-      margin: 20px 0;
-    }
-
-    .furture-item p {
-      display: inline-block;
-      margin: 0 10px;
-    }
-
-    .arrow {
-      font-size: 24px;
-      margin-top: 10px;
-    }
-
-    #topics {
-      background: rgb(255, 247, 0);
-    }
-
-    #topics .content {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      grid-template-rows: repeat(2, 1fr);
-      gap: 10px;
-    }
-
-    #topics .content .item {
-      text-align: center;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .item-img {
-      width: 150px;
-      height: 150px;
-      background: lightgray;
-    }
-
-    #company {
-      text-align: center;
-    }
-  </style>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
