--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
   </header>
 
   <section id="top">
+    <img src="./img/Top.png" alt="ラーメン" class="top-img">
     <div class="top-title">
       <h1>RARMEN</h1>
       <p>美味しいラーメンを、もっと楽しく</p>
     </div>
   </section>
-  <div id="data">
+  <section id="data">
     <p>住所</p>
     <p>営業時間</p>
-  </div>
+  </section>
 
   <section id="news">
     <div class="news-content01">
@@ -68,100 +69,205 @@
           </a></li>
       </ul>
     </div>
-
   </section>
 
   <section id="about">
-    <h2 class="subTitle">ABOUT</h2>
-    <div class="content">
+    <div class="content left">
+      <h2 class="subTitle">ABOUT</h2>
       <div>
-        <p>私たちのラーメンは、こだわりの素材で作られています。</p>
+        <p>こだわりの素材</p>
+        <p>こだわりの素材で私たちはラーメンを作っており、<br>
+          私たちはこだわりの素材で、ラーメンを作っております。</p>
+        <a href="#">more ></a>
       </div>
+    </div>
+    <div class="content">
       <div class="placeholder"></div>
     </div>
   </section>
 
   <section id="service">
-    <h2 class="subTitle">SERVICE</h2>
-    <div class="content">
-      <div>
-        <span class="title">麺</span>
-        <span class="detail">小麦粉を使用し、コシのある食感が特徴。</span>
+    <div class="content left">
+      <h2 class="subTitle">SERVICE</h2>
+      <p>素材にこだわって作っています。</p>
+      <a href="#">more ></a>
+    </div>
+    <div class="service-items">
+      <div class="service-item service-img1">
+        <div class="service-title">
+          <h4>麺</h4>
+        </div>
+        <div class="service-detail">
+          <h4>麺</h4>
+          <p>小麦粉を使用し、コシのある食感が特徴。</p>
+          <a href="#">more ></a>
+        </div>
       </div>
-      <div>
-        <span class="title">スープ</span>
-        <span class="detail">豚骨や鶏ガラを長時間煮込んで旨味を抽出。</span>
+      <div class="service-item service-img2">
+        <div class="service-title">
+          <h4>スープ</h4>
+        </div>
+        <div class="service-detail">
+          <h4>スープ</h4>
+          <p>豚骨や鶏ガラを長時間煮込んで旨味を抽出。</p>
+          <a href="#">more ></a>
+        </div>
       </div>
-      <div>
-        <span class="title">チャーシュー</span>
-        <span class="detail">じっくり煮込んで柔らかく仕上げた豚肉。</span>
+      <div class="service-item service-img1">
+        <div class="service-title">
+          <h4>チャーシュー</h4>
+        </div>
+        <div class="service-detail">
+          <h4>チャーシュー</h4>
+          <p>じっくり煮込んで柔らかく仕上げた豚肉。</p>
+          <a href="#">more ></a>
+        </div>
       </div>
-      <div>
-        <span class="title">メンマ</span>
-        <span class="detail">発酵させたタケノコを使用し、風味豊か。</span>
+      <div class="service-item service-img2">
+        <div class="service-title">
+          <h4>メンマ</h4>
+        </div>
+        <div class="service-detail">
+          <h4>メンマ</h4>
+          <p>発酵させたタケノコを使用し、風味豊か。</p>
+          <a href="#">more ></a>
+        </div>
       </div>
-      <div>
-        <span class="title">ネギ</span>
-        <span class="detail">薬味として風味を引き立てる重要な食材。</span>
+      <div class="service-item service-img1">
+        <div class="service-title">
+          <h4>ネギ</h4>
+        </div>
+        <div class="service-detail">
+          <h4>ネギ</h4>
+          <p>薬味として風味を引き立てる重要な食材。</p>
+          <a href="#">more ></a>
+        </div>
       </div>
     </div>
   </section>
 
   <section id="furture">
     <h2 class="subTitle">FURTURE</h2>
-    <div class="content">
-      <div class="furture-item">
-        <p>未来のラーメン</p>
-        <p>私たちは新しいラーメンを探求し続けます。</p>
-        <div class="arrow">↓</div>
-      </div>
-      <div class="furture-item">
-        <p>革新のスープ</p>
-        <p>独自の技術でスープを進化させます。</p>
-        <div class="arrow">↓</div>
-      </div>
-      <div class="furture-item">
-        <p>世界展開</p>
-        <p>世界中にRARMENの味を届けます。</p>
-      </div>
+    <div class="content1">
+      <table>
+        <tr class="furture-item">
+          <td class="furture-item-left">
+            <p>未来のラーメン</p>
+            <div class="arrow">↓</div>
+          </td>
+          <td class="furture-item-right">
+            <p>私たちは新しいラーメンを探求し続けます。<br>
+              常に探求続けます。</p>
+          </td>
+        </tr>
+        <tr class="furture-item">
+          <td class="furture-item-left">
+            <p>革新のスープ</p>
+            <div class="arrow">↓</div>
+          </td>
+          <td class="furture-item-right">
+            <p>独自の技術でスープを進化させます。<br>
+              ずっと進化させます。</p>
+          </td>
+        </tr>
+        <tr class="furture-item">
+          <td class="furture-item-left">
+            <p>世界展開</p>
+          </td>
+          <td class="furture-item-right">
+            <p>世界中にRARMENの味を届けます。<br>
+              どこへでも届けます。</p>
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div class="content2">
+      <a href="#">more ></a>
     </div>
   </section>
 
   <section id="topics">
     <h2 class="subTitle">TOPICS</h2>
-    <div class="content">
-      <div class="item">
-        <div class="item-img"></div>新しい試み
+
+    <div class="slider-wrapper">
+      <div class="slider-container">
+        <div class="slide">
+          <div class="slide-item">
+            <a href="">
+              <div class="img fake-img1"></div>
+              <div class="imag-label">Image 1</div>
+            </a>
+          </div>
+          <div class="slide-item">
+            <a href="">
+              <div class="img fake-img2"></div>
+              <div class="imag-label">Image 2</div>
+            </a>
+          </div>
+        </div>
+        <div class="slide">
+          <div class="slide-item">
+            <a href="">
+              <div class="img fake-img3"></div>
+              <div class="imag-label">Image 3</div>
+            </a>
+          </div>
+          <div class="slide-item">
+            <a href="">
+              <div class="img fake-img4"></div>
+              <div class="imag-label">Image 4</div>
+            </a>
+          </div>
+        </div>
+        <div class="slide">
+          <div class="slide-item">
+            <a href="">
+              <div class="img fake-img5"></div>
+              <div class="imag-label">Image 5</div>
+            </a>
+          </div>
+          <div class="slide-item">
+            <a href="">
+              <div class="img fake-img6"></div>
+              <div class="imag-label">Image 6</div>
+            </a>
+          </div>
+        </div>
+        <div class="slide">
+          <div class="slide-item">
+            <a href="">
+              <div class="img fake-img7"></div>
+              <div class="imag-label">Image 7</div>
+            </a>
+          </div>
+          <div class="slide-item">
+            <a href="">
+              <div class="img fake-img8"></div>
+              <div class="imag-label">Image 8</div>
+            </a>
+          </div>
+        </div>
+        <div class="slide">
+          <div class="slide-item">
+            <a href="">
+              <div class="img fake-img5"></div>
+              <div class="imag-label">Image 9</div>
+            </a>
+          </div>
+        </div>
       </div>
-      <div class="item">
-        <div class="item-img"></div>イベント情報
-      </div>
-      <div class="item">
-        <div class="item-img"></div>お客様の声
-      </div>
-      <div class="item">
-        <div class="item-img"></div>コラボ企画
-      </div>
-      <div class="item">
-        <div class="item-img"></div>人気ランキング
-      </div>
-      <div class="item">
-        <div class="item-img"></div>新店舗情報
-      </div>
-      <div class="item">
-        <div class="item-img"></div>スタッフ紹介
-      </div>
-      <div class="item">
-        <div class="item-img"></div>こだわりの材料
-      </div>
+
+      <!-- 操作用ボタン -->
+      <button class="imag-nav slide-prev">←</button>
+      <button class="imag-nav slide-next">→</button>
     </div>
+
   </section>
 
   <section id="company">
     <h2 class="subTitle">COMPANY</h2>
     <p>会社概要: RARMEN 株式会社</p>
   </section>
-
 
   <footer>
     <nav>
@@ -189,6 +295,111 @@
         observer.observe(section);
       });
     });
+
+
+
+
+
+    // スライダーの親コンテナを取得
+    const slider = document.querySelector('.slider-container');
+
+    // 元のスライドセットを取得し、複製してループ表示用に追加
+    const originalSlides = Array.from(document.querySelectorAll('.slide'));
+    originalSlides.forEach(slide => {
+      const clone = slide.cloneNode(true); // 深い複製
+      slider.appendChild(clone);
+    });
+
+    // 全スライドを再取得（複製後）
+    const allSlides = document.querySelectorAll('.slide');
+
+    // 1セット分のスライド幅（マージン込み）
+    const slideWidth = allSlides[0].offsetWidth + 10;
+
+    // 実際のスライドセット数（ループ前）
+    const totalOriginalSlides = originalSlides.length;
+
+    // 現在のインデックス、フラグ類
+    let currentIndex = 0;
+    let timerId;
+
+    /**
+     * スライドの位置を更新（アニメーション付き）
+     */
+    function updateSlide() {
+      slider.style.transition = 'transform 0.5s ease';
+      slider.style.transform = `translateX(${-currentIndex * slideWidth}px)`;
+    }
+
+    /**
+     * 次のスライドに移動
+     */
+    function nextSlide() {
+      currentIndex++;
+
+      if (currentIndex >= totalOriginalSlides + 1) {
+        // 末尾を超えた場合、瞬時に先頭に戻しアニメーションを再適用
+        currentIndex = 0;
+        slider.style.transition = 'none';
+        slider.style.transform = `translateX(0px)`;
+
+        // 2フレーム後にスライドを1つ進めてアニメーション再開
+        requestAnimationFrame(() => {
+          requestAnimationFrame(() => {
+            currentIndex = 1;
+            updateSlide();
+          });
+        });
+      } else {
+        updateSlide();
+      }
+    }
+
+    /**
+     * 前のスライドに移動
+     */
+    function prevSlide() {
+      currentIndex--;
+
+      if (currentIndex < 0) {
+        // 先頭を超えた場合、末尾の複製部分に瞬時に移動
+        currentIndex = totalOriginalSlides;
+        slider.style.transition = 'none';
+        slider.style.transform = `translateX(${-slideWidth * totalOriginalSlides}px)`;
+
+        requestAnimationFrame(() => {
+          requestAnimationFrame(() => {
+            currentIndex = totalOriginalSlides - 1;
+            updateSlide();
+          });
+        });
+      } else {
+        updateSlide();
+      }
+    }
+
+    /**
+     * 自動スライド開始
+     */
+    function startAutoSlide() {
+      timerId = setInterval(() => {
+        nextSlide();
+      }, 5000);
+    }
+
+    // ナビゲーションボタンにイベントを追加
+    document.querySelector('.slide-next').addEventListener('click', () => {
+      nextSlide();
+    });
+
+    document.querySelector('.slide-prev').addEventListener('click', () => {
+      prevSlide();
+    });
+
+    // 最初に自動スライド開始
+    startAutoSlide();
+
+
   </script>
 </body>
 
