--- a/sample/rotation.html
+++ b/sample/rotation.html
@@ -53,7 +53,7 @@
     .title h2 {
       height: 40px;
       padding: 7px 0 5px 10px;
-      margin: 0 0 0 210px;
+      margin: 0 0 0 160px;
       font-size: 24px;
       color: #fff;
       border-bottom: 1px solid #ccc;
@@ -87,34 +87,39 @@
 <body>
   <section id="section1">
     <div class="title">
-      <h2>section1</h2>
+      <h2>Top</h2>
     </div>
   </section>
   <section id="section2">
     <div class="title">
-      <h2>section2</h2>
+      <h2>News</h2>
     </div>
   </section>
   <section id="section3">
     <div class="title">
-      <h2>section3</h2>
+      <h2>About</h2>
     </div>
   </section>
   <section id="section4">
     <div class="title">
-      <h2>section4</h2>
+      <h2>Service</h2>
     </div>
   </section>
   <section id="section5">
     <div class="title">
-      <h2>section5</h2>
+      <h2>Topic</h2>
     </div>
   </section>
   <section id="section6">
     <div class="title">
-      <h2>section6</h2>
+      <h2>Future</h2>
     </div>
   </section>
+
+
+  <div>
+    <a href="../sample.html">サンプルページに戻る</a>
+  </div>
 
   <div class="circle-nav" id="circleNav"></div>
 
@@ -148,7 +153,7 @@
         const angle = ((360 / dotCount) * i - angleOffset) * (Math.PI / 180);
         const x = radius * Math.cos(angle);
         const y = radius * Math.sin(angle);
-        dot.style.transform = `translate(${x + 75}px, ${y + 5}px) scale(1)`;
+        dot.style.transform = `translate(${x + 25}px, ${y + 5}px) scale(1)`;
       });
     }
 
